--- a/.github/workflows/main_webapp-php.yml
+++ b/.github/workflows/main_webapp-php.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           name: php-app
           path: release.zip
+          package: ./OnlineBank
 
   deploy:
     runs-on: ubuntu-latest
