--- a/.github/workflows/main_webapp-php.yml
+++ b/.github/workflows/main_webapp-php.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           name: php-app
           path: release.zip
-          package: ./OnlineBank
+          package: ./Bank_Oppgave
 
   deploy:
     runs-on: ubuntu-latest
